--- a/html/user-auth.html
+++ b/html/user-auth.html
@@ -10,7 +10,7 @@
     <ul>
         <li>HTML</li>
         <body>
-            Veuillez vous enregistrer
+            Gros changement là
             
         </body>
     </ul>
